fix: right-align "legal" in the navbar 👩🏻‍🔧

--- a/layout.css
+++ b/layout.css
@@ -51,6 +51,9 @@ nav ul {
   flex-wrap: wrap;
   gap: 1rem;
 }
+nav ul > li:last-child {
+  margin-left: auto;
+}
 footer {
   width: 100%;
   margin: 0 auto 1rem auto;
